--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "type": "module",
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.1",
+    "@ai-sdk/openai": "^1.3.9",
     "@mastra/core": "^0.6.4",
     "@mastra/mcp": "^0.3.5",
+    "@mastra/memory": "^0.2.4",
+    "@mastra/pg": "^0.2.4",
+    "@openrouter/ai-sdk-provider": "^0.4.5",
     "mastra": "^0.4.3",
+    "ollama-ai-provider": "^1.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
